--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
+.eggs/
 
-/.idea/
-
+# Build folder
 /build/
+
+# IDE project metadtaa
+/.idea/
+.vscode/
